# Speech-recognition-mood-analyser

./: main.py  pyproject.toml
